--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "axios-cookiejar-support": "^6.0.5",
     "cheerio": "^1.1.2",
     "jimp": "^1.6.0",
-    "onnxruntime-web": "^1.23.2",
+    "onnxruntime-node": "^1.23.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.34.5",
